force-app/main/default/objects/Consortia_Account__c/Consortia_Account__c.object-meta.xml
<CustomObject>
    <description>A junction object to allow for a many - many relationship to exist between accounts and consortia</description>
    <label>Consortia Account</label>
    <nameField>
        <displayFormat>CA-{MMYY}-{00000}</displayFormat>
        <label>Consortia Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consortia Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>