force-app/main/default/objects/Consortia_Account__c/fields/Combined__c.field-meta.xml
<CustomField>
    <fullName>Combined__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Field used to prevent duplicate records. Populated via workflow on record creation</description>
    <label>Combined</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>