force-app/main/default/objects/Consortia_Account__c/fields/Consortium__c.field-meta.xml
<CustomField>
    <fullName>Consortium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consortium</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consortium/Network</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consortia Accounts (Consortium)</relationshipLabel>
    <relationshipName>Consortia</relationshipName>
    <type>Lookup</type>
</CustomField>